<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SchoolActivity"
    android:background="#f4f4f4"
    android:orientation="vertical" 
    >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
      android:id="@+id/a" 
      android:background="#ffffff" 
      android:padding="5dp"
      android:layout_margin="10dp"
    >
    
      <LinearLayout 
          android:layout_width="wrap_content"
         android:layout_height="wrap_content"
     android:orientation="vertical"
          android:layout_weight="1"
       android:layout_margin="5dp"
                  android:id="@+id/inv" 
                  android:padding="5dp"
          android:background="@drawable/luntans"
          >
         <ImageView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/rijiben"
             android:layout_gravity="center"
             
             />
         <TextView 
      android:layout_height="wrap_content" 
      android:layout_width="wrap_content"
      android:text="日记本"
      android:textSize="15sp"
      android:textColor="#ffffff"
android:layout_gravity="center"
 />  
      </LinearLayout>  
       <LinearLayout 
          android:layout_width="wrap_content"
         android:layout_height="match_parent"
     android:orientation="vertical"
          android:layout_weight="1"
                 android:gravity="center"
                  android:id="@+id/spo" 
                  android:padding="5dp"
                    android:background="#bfefff"
              android:layout_margin="5dp"
          
          >
     
     
    
         <ImageView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/tianqi"
             android:layout_gravity="center"
             />
         <TextView 
      android:layout_height="wrap_content" 
      android:layout_width="wrap_content"
      android:text="天气"
      android:textSize="15sp"
      android:textColor="#ffffff"
android:layout_gravity="center"
 />   
    
    </LinearLayout> 
      <LinearLayout 
          android:layout_width="wrap_content"
         android:layout_height="match_parent"
     android:orientation="vertical"
          android:layout_weight="1"
         android:id="@+id/club" 
          android:padding="5dp"
             android:layout_margin="5dp"
                                        android:background="#e9967a"
          >
    
   
        <ImageView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/xiaoqi"
             android:layout_gravity="center"
             
             />
         <TextView 
      android:layout_height="wrap_content" 
      android:layout_width="wrap_content"
      android:text="地图"
      android:textSize="15sp"
      android:textColor="#ffffff"
android:layout_gravity="center"
 />  
         </LinearLayout> 
    </LinearLayout>
    
    
    
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    
    
    
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:id="@+id/tv_school1"
        android:background="@drawable/button"
        android:clickable="true"
        >
    
     <ImageView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:gravity="center"
       android:src="@drawable/ffeb"
       
       />
    <TextView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:text="@string/schoolfengyun"
       android:textSize="18sp"
       android:textColor="#000000"
       android:layout_gravity="center"
         android:gravity="center"
         android:layout_weight="1"
       />
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/guanyu"
        android:layout_gravity="center"
        
        />
    </LinearLayout>
   
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
               android:id="@+id/tv_school2"
                  android:clickable="true"
                       android:background="@drawable/button"
               
        
        >
    
     <ImageView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:gravity="center"
       android:src="@drawable/xingxing"
       
       />
    <TextView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:text="@string/schoolzongzan"
       android:textSize="18sp"
       android:gravity="center"
       android:textColor="#000000"
       android:layout_gravity="center"
         android:layout_weight="1"
       />
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/guanyu"
        android:layout_gravity="center"
        
        />
    </LinearLayout>
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
             android:id="@+id/tv_school5"
                android:background="@drawable/button"
        >
    
     <ImageView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:gravity="center"
       android:src="@drawable/jjjjj"
       
       />
    <TextView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:text="@string/schoolzhaoping"
       android:textSize="18sp"
       android:gravity="center"
       android:textColor="#000000"
       android:layout_gravity="center"
  
         android:layout_weight="1"
       />
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/guanyu"
        android:layout_gravity="center"
        
        />
    </LinearLayout>
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
         android:id="@+id/tv_school4"
                 android:clickable="true"
              android:background="@drawable/button"
 >
    
     <ImageView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:gravity="center"
       android:src="@drawable/fdg"
       
       />
    <TextView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:text="@string/schoolxinshen"
       android:textSize="18sp"
       android:gravity="center"
       android:textColor="#000000"
       android:layout_gravity="center"
      
         android:layout_weight="1"
       />
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/guanyu"
        android:layout_gravity="center"
        
        />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
         android:id="@+id/tv_school6"
               android:clickable="true"
               android:background="@drawable/button"
        >
    
     <ImageView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:gravity="center"
       android:src="@drawable/hhhu"
       
       />
    <TextView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:text="@string/schoolzhouzan"
       android:textSize="18sp"
       android:gravity="center"
       android:textColor="#000000"
       android:layout_gravity="center"
      
         android:layout_weight="1"
       />
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/guanyu"
        android:layout_gravity="center"
        
        />
    </LinearLayout>
    
  </LinearLayout>
   

</LinearLayout>