<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4fa"
    tools:context=".UpSpoActivity" 
    android:orientation="vertical"
   >
  
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/biaoti"
        android:background="#63b8ff"
        
        >
       <TextView
   android:id="@+id/tv_back"        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/loginbut"
   
       android:drawableLeft="@drawable/goback"
      android:gravity="center"
      android:padding="5dp"
      />
    
    
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
   android:text="修改活动"
   android:textColor="#ffffff"
   android:textSize="20sp"
      android:padding="5dp"
      android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
      
      />
       <TextView 
           
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="有"
             android:textColor="#ffffff"
   android:textSize="20sp"
      android:padding="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="invisible"
           />
    
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/biaoti"
                android:textColor="#565656"
                android:textSize="18sp" 
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/et_spotitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wubian"
                android:hint="输入你的标题(最好包含地点，做什么...)"
                android:lines="2"
                android:maxLength="80"
                android:textColor="#000000"
                android:textColorHint="#bbbbbb"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal" >

            <TextView
               android:layout_margin="5dp"  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zhuyi"
                android:textColor="#565656"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_spocontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wubian"
                android:hint="要注意什么~~"
                android:lines="3"
                android:maxLength="180"
                android:textColor="#000000"
                android:textColorHint="#bbbbbb" 
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal" >

            <TextView
              android:layout_margin="5dp"   android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/renshu"
                android:textColor="#565656"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_spoperson"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/wubian"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="4"
                android:textColorHint="#bbbbbb" 
                  android:textColor="#000000"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
             android:layout_margin="5dp"    android:singleLine="true"
                android:text="人"
                android:textColor="#565656"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
             android:layout_margin="5dp"    android:text="预计日期："
                android:textColor="#565656"
                android:textSize="15sp" />
            
            <Spinner
                android:id="@+id/sp_nian"
                android:layout_width="60dp"
                android:layout_height="wrap_content" 
                 android:background="@drawable/wubian"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:singleLine="true"
                android:text="年"
                android:textColor="#565656"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/sp_yue"
                android:layout_width="40dp"
                android:layout_height="wrap_content" 
                 android:background="@drawable/wubian"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:singleLine="true"
                android:text="月"
                android:textColor="#565656"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/sp_ri"
                android:layout_width="40dp"
                android:layout_height="wrap_content" 
                android:background="@drawable/wubian"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:singleLine="true"
                android:text="日"
                android:textColor="#565656"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
              android:layout_margin="5dp"   android:text="预计时间："
                android:textColor="#565656"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_shi"
                android:layout_width="40dp"
                android:layout_height="match_parent" 
                android:background="@drawable/wubian"
                android:numeric="integer"
                android:singleLine="true"
                android:maxLength="2"
                                android:textColor="#000000"
                                android:textSize="15sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:singleLine="true"
                android:text="点"
                android:textColor="#565656"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_fen"
                android:layout_width="40dp"
              android:layout_height="match_parent"
              android:background="@drawable/wubian"
                android:numeric="integer"
                android:singleLine="true"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="15sp"
                
               />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:singleLine="true"
                android:text="分"
                android:textColor="#565656"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
      <ProgressBar 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:id="@+id/inv_pro"
        
        />
      <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
android:gravity="center"        
    >
     

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/loginbut"
        android:clickable="true"
        android:gravity="center"
       android:layout_gravity="center"
        android:text="发布"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:id="@+id/crespo" />
</LinearLayout>

</LinearLayout>